# cpumanager

./: .gitignore  CMakeLists.txt  README.md  flake.nix
Scripts/: CpuFreqChange.sh  WatchFreq.sh
doc/: doxygen.config
include/: Core.h  Cpu.h  IReader.h  Sys.h  mainwindow.h  timer.h
src/: ComboBoxHelper.h  Core.cpp  Cpu.cpp  IReader.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mainwindow.ui.autosave  signalmanager.cpp  signalmanager.h  sliderreader.cpp  sliderreader.h
